# permafrost

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compile_and_inspect.py  rustc-ice-2024-02-04T15_51_55-78461.txt  rustfmt.toml
ast/: Cargo.toml
ast/src/: lib.rs
bytecode/: Cargo.toml  README.md
bytecode/src/: lib.rs  text_repr.rs
compiler/: Cargo.toml  README.md
compiler-driver/: Cargo.toml  README.md
compiler-driver/src/: compile.rs  main.rs
compiler/src/: codegen.rs  context.rs  lib.rs  modules.rs  utils.rs
compiler/src/codegen/: bytecode.rs
compiler/src/context/: mod.rs  names.rs  types.rs
compiler/src/ir/: mod.rs  named.rs  typed.rs
compiler/src/semantic/: mod.rs  nameresolution.rs  typecheck.rs
dev-blog/: book.toml
dev-blog/book/: 404.html  chapter_1.html  introduction.html  print.html  searchindex.js  searchindex.json
dev-blog/src/: 14_dec_23.md  SUMMARY.md  introduction.md
doc/: README.md  grammar.md
examples/: battle-test.fb  battle-test.fsb  example.fsb  fib.fb  fib.fsb  import.pmf  math.fsb  other.fsb  other.pmf  random.pmf
frostbite-bytecode/: Cargo.toml
frostbite-bytecode/src/: lib.rs  text_repr.rs
frostbite-compiler/: Cargo.toml  README.md
frostbite-compiler-driver/: Cargo.toml
frostbite-compiler-driver/src/: main.rs
frostbite-compiler/src/: codegen.rs  context.rs  hir.rs  intrinsic.rs  lib.rs  modules.rs  tir.rs  types.rs  utils.rs
frostbite-compiler/src/codegen/: bytecode.rs
frostbite-compiler/src/ir/: named.rs  typed.rs
frostbite-compiler/src/semantic/: mod.rs  nameresolution.rs  typecheck.rs
frostbite-disassembler/: Cargo.toml
frostbite-disassembler/src/: main.rs
frostbite-interpreter/: Cargo.toml
frostbite-interpreter/src/: arithmetic.rs  error.rs  helper.rs  interpreter.rs  intrinsics.rs  main.rs  repl.rs  rt_value.rs
frostbite-parser/: Cargo.toml  build.rs  grammar.md
frostbite-parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.lalrpop
frostbite-repl/: Cargo.toml
frostbite-repl/src/: main.rs
frostbite-report-interface/: Cargo.toml
frostbite-report-interface/src/: lib.rs  print.rs  utils.rs
frostbite-report-interface/src/print_backend/: custom.rs  mod.rs
frostbite-reports/: Cargo.toml
frostbite-reports/src/: backtrace_printer.rs  diagnostic_printer.rs  lib.rs  print.rs  printer.rs  sourcemap.rs  utils.rs
frostbite-reports/src/diagnostic_printer/: ariadne.rs
frostbite-reports/src/print/: ariadne.rs
frostbite-reports/src/print_backend/: custom.rs  mod.rs
frostbite-reports/src/printer/: ariadne.rs
frostbite-runtime/: Cargo.toml
frostbite-runtime-desktop/: Cargo.toml
frostbite-runtime-desktop/src/: cli.rs  helper.rs  intrinsics.rs  main.rs
frostbite-runtime/src/: error.rs  eval.rs  helper.rs  internals.rs  intrinsic.rs  lib.rs  math.rs  stack.rs  value.rs
frostbite-runtime/src/thread/: dumb_backend.rs  mod.rs
frostbite-sandbox/: Cargo.toml
frostbite-sandbox/src/: error.rs  eval.rs  helper.rs  internals.rs  intrinsic.rs  lib.rs  math.rs  stack.rs  value.rs
frostbite-semantic/: Cargo.toml
frostbite-semantic/src/: lib.rs  typecheck.rs
frostbite-std-runtime/: Cargo.toml
frostbite-std-runtime/src/: cli.rs  helper.rs  intrinsics.rs  main.rs
frostbite-vm-core/: Cargo.toml
frostbite-vm-core/src/: frames.rs  lib.rs  stack_value.rs
frostbite-web-repl/: Cargo.toml  README.md
frostbite-web-repl/frontend/: index.html  style.css
frostbite-web-repl/src/: main.rs
main-executable/: Cargo.toml
main-executable/src/: cli.rs  compile.rs  logging.rs  main.rs
parser/: Cargo.toml  README.md  build.rs  grammar.md
parser/src/: ast.rs  error.rs  grammar.lalrpop  lexer.rs  lib.rs
repl/: Cargo.toml  README.md
repl/src/: main.rs
reports/: Cargo.toml  README.md
reports/src/: lib.rs  printer.rs  sourcemap.rs
reports/src/printer/: ariadne.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
vm-core/: Cargo.toml
vm-core/src/: lib.rs  math.rs  registers.rs  stack.rs  value.rs
web-frostbite-playground/backend/: Cargo.toml
web-frostbite-playground/backend/src/: main.rs
web-frostbite-playground/frontend/: app.js  index.html
