[workspace]
package.version = "0.1.0"
package.edition = "2021"

resolver = "2"

members = [
    "parser",
    "reports",
    "compiler",
    "compiler-driver",
    "bytecode",
    "repl", 
    "ast",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Utility crates commonly used

[workspace.dependencies]
derive_more = "0"
cfg-if = "1"
owo-colors = "4"
enum_dispatch = "0.3"

[workspace.dependencies.dbg-pls]
version = "0.4"
features = ["colors", "derive", "pretty"]

[workspace.dependencies.log]
version = "0.4"
default-features = false

[workspace.dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[workspace.dependencies.slotmap]
default-features = false
features = ["serde"]
version = "1"

[workspace.dependencies.const_format]
version = "0"

[workspace.dependencies.num-traits]
version = "0"
default-features = false

[workspace.dependencies.color-eyre]
version = "0"

[workspace.dependencies.clap]
version = "4"
features = ["derive"]

[workspace.lints.clippy]
too_many_arguments = "allow"

[workspace.lints.rust]
rust_2018_idioms = "warn"
unsafe_code = "deny"
