[package]
name = "frostbite-ast"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = { workspace = true }
const_format = { workspace = true }
derive_more = { workspace = true }
num-traits = { workspace = true }
dbg-pls = { workspace = true }
cfg-if = { workspace = true }

[lints]
workspace = true
