[package]
name = "frostbite-compiler"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
frostbite-bytecode = { path = "../bytecode" }
frostbite-reports = { path = "../reports" }
frostbite-parser = { path = "../parser" }

derive_more = { workspace = true }
slotmap = { workspace = true }
dbg-pls = { workspace = true }
log = { workspace = true }

[features]
std = []

[lints]
workspace = true
