[package]
name = "frostbite-bytecode"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []

[dependencies]
ciborium = { version = "0.2.1", default-features = false }
variant_name = "0"
variant_name_derive = "0"

serde = { version = "1.0.193", default-features = false, features = ["derive"] }

derive_more = { workspace = true }
color-eyre = { workspace = true }
owo-colors = { workspace = true }
slotmap = { workspace = true }

[lints]
workspace = true
