[package]
name = "frostbite-bytecode"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []

[dependencies]
ciborium = { version = "0", default-features = false }
serde_variant = "0"

serde = { version = "1.0.193", default-features = false, features = ["derive"] }

owo-colors = { workspace = true }
derive_more = { workspace = true }
slotmap = { workspace = true }

[lints]
workspace = true
