[package]
name = "frostbite-compiler-driver"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frostbite-compiler = { path = "../frostbite-compiler" }
frostbite-bytecode = { path = "../frostbite-bytecode" }
frostbite-reports = { path = "../frostbite-reports", features = [
    "diagnostic_printer",
    "ariadne",
    "std",
] }
frostbite-parser = { path = "../frostbite-parser" }

color-eyre = { workspace = true }
log = { workspace = true }

clap = { version = "4", features = ["derive", "color"] }
fern = { version = "0.6" }

[lints]
workspace = true
