[package]
name = "frostbite-compiler"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
frostbite-bytecode = { path = "../frostbite-bytecode" }
frostbite-reports = { path = "../frostbite-reports" }
frostbite-parser = { path = "../frostbite-parser" }

derive_more = { workspace = true }

[lints]
workspace = true
