[package]
name = "frostbite-disassembler"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
owo-colors = { workspace = true }
clap = { workspace = true }

frostbite-bytecode = { path = "../frostbite-bytecode", features = ["std"] }

[lints]
workspace = true
