[package]
name = "frostbite-interpreter"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { workspace = true }
frostbite-parser = { path = "../frostbite-parser" }
frostbite-report-interface = { path = "../frostbite-report-interface" }
