[package]
name = "frostbite-interpreter"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }

derive_more = { workspace = true }
const_format = { workspace = true }

frostbite-parser = { path = "../frostbite-parser" }
frostbite-report-interface = { path = "../frostbite-report-interface", features = [
    "std",
] }

[lints]
workspace = true
