[package]
name = "frostbite-interpreter"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
derive_more = { workspace = true }

frostbite-parser = { path = "../frostbite-parser" }
frostbite-reports = { path = "../frostbite-reports", features = ["printer"] }

[lints]
workspace = true
