[package]
name = "frostbite-parser"

version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
derive_more = { workspace = true }
num-traits = { workspace = true }
const_format = { workspace = true }
cfg-if = { workspace = true }

frostbite-report-interface = { path = "../frostbite-report-interface" }

logos = { version = "0.13.0", default-features = false, features = [
    "export_derive",
] }

[lints]
workspace = true

[features]
std = []
