[package]
name = "frostbite-parser"

version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = { workspace = true }
const_format = { workspace = true }
derive_more = { workspace = true }
num-traits = { workspace = true }
dbg-pls = { workspace = true }
cfg-if = { workspace = true }

frostbite-reports = { path = "../frostbite-reports" }

logos = { version = "0.13.0", default-features = false, features = [
    "export_derive",
] }

[lints]
workspace = true

[features]
std = []
