[package]
name = "frostbite-reports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { workspace = true }
cfg-if = { workspace = true }

ariadne = "0.3"

[features]
printer = ["std"]
std = []

[lints]
workspace = true
