[package]
name = "frostbite-reports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { workspace = true }
slotmap = { workspace = true }
cfg-if = { workspace = true }

ariadne = { version = "0.3", optional = true }

[features]
ariadne = ["std", "dep:ariadne", "diagnostic_printer"]
diagnostic_printer = []
std = []

[lints]
workspace = true
