[package]
name = "frostbite-reports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, optional = true }

derive_more = { workspace = true }
slotmap = { workspace = true }
cfg-if = { workspace = true }

ariadne = { version = "0.3", optional = true }

[features]
ariadne = ["std", "dep:ariadne", "diagnostic_printer"]
serde = ["dep:serde"]
std = ["serde/std"]

diagnostic_printer = []

[lints]
workspace = true
