[package]
name = "frostbite-semantic"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frostbite-parser = { path = "../frostbite-parser" }
frostbite-reports = { path = "../frostbite-reports" }

[lints]
workspace = true
