[package]
name = "frostbite-std-runtime"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.4.10", features = ["derive"] }
derive_more = { workspace = true }

frostbite-reports = { path = "../frostbite-reports", features = [
    "std",
    "diagnostic_printer",
    "ariadne",
] }
frostbite-runtime = { path = "../frostbite-runtime" }
frostbite-parser = { path = "../frostbite-parser" }

[lints]
workspace = true
