[package]
name = "permafrost-parser"

version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = { workspace = true }
const_format = { workspace = true }
derive_more = { workspace = true }
num-traits = { workspace = true }
itertools = { workspace = true }
dbg-pls = { workspace = true }
cfg-if = { workspace = true }

permafrost-reports = { path = "../reports" }
permafrost-ast = { path = "../ast" }

lalrpop-util = { version = "0.20", default-features = false }
logos = { version = "0.14", default-features = false, features = [
    "export_derive",
] }

[build-dependencies]
lalrpop = { version = "0.20", default-features = false }

[lints]
workspace = true

[features]
std = []
