[package]
name = "frostbite-repl"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reedline = "0"

frostbite-compiler = { path = "../compiler", features = ["std"] }
frostbite-runtime = { path = "../runtime" }
frostbite-vm-core = { path = "../vm-core" }
frostbite-reports = { path = "../reports", features = ["std", "ariadne"] }

color-eyre = { workspace = true }

[lints]
workspace = true
