[package]
name = "permafrost-repl"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = { version = "13", default-features = false }

permafrost-compiler = { path = "../compiler", features = ["std"] }
permafrost-runtime = { path = "../runtime" }
permafrost-vm-core = { path = "../vm-core" }
permafrost-reports = { path = "../reports", features = ["std", "ariadne"] }

color-eyre = { workspace = true }

[lints]
workspace = true
