[package]
name = "backend"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
serde_json = "1.0.110"
base64 = "0.21.5"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }

frostbite-reports = { path = "../../frostbite-reports", features = ["serde"] }
frostbite-compiler = { path = "../../frostbite-compiler" }
frostbite-bytecode = { path = "../../frostbite-bytecode" }

[lints]
workspace = true
